[package]
name = "hello-neon"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.8"
default-features = false
features = ["napi-4", "event-queue-api"]

[dependencies.tokio]
version = "1.6"
features = ["rt-multi-thread"]

[dependencies]
serde_json = "1.0.64"
once_cell = "1.7"
